add sections 4, 5 and 6

--- a/1-introduction.tex
+++ b/1-introduction.tex
@@ -80,9 +80,8 @@ Our research addresses these gaps by proposing a low-cost, non-intrusive system 
 
 % \textit{\blue{The last paragraph of Introduction should tell how the rest of the paper is structured. Below is just an example. Feel free to edit.}}
 
-%  The rest of the paper is organized as follows. We discuss the related work in Section~\ref{sec:related}. In Section~\ref{sec:problem}, we provide the system model and provide the problem statement and optimization model. 
-% In Section~\ref{sec:results}, we provide simulation/experimental results regarding the performance of proposed solution in various scenarios.
-% Finally, we conclude and discuss future work in Section~\ref{sec:conclusion}.
+ The rest of the paper is organized as follows. We discuss the related work in Section~\ref{sec:related}. In Section~\ref{sec:problem}, we provide the system model and provide the steps of the proposed solution and related experiments to evaluate the performance of the proposed solution. 
+In Section~\ref{sec:experimental_setup}, we provide the details of the experimental setup, including the hardware and software components used in our experiments, followed by Section~\ref{sec:experimental_results}, where we provide and describe the results of our experiments. Finally, we conclude and discuss future work in Section~\ref{sec:conclusion}.
 
 
 
