--- a/main.tex
+++ b/main.tex
@@ -57,10 +57,10 @@ kalinsazlioef@vcu.edu\\
  \input{0-abstract}
  \input{1-introduction}
  \input{2-related_work}
-%  \input{3-system}
-%  \input{3-experimental_setup}
-%  \input{4-evaluation}
-%  \input{5-conclusion}
+ \input{3-system}
+ \input{4-experimental_setup}
+ \input{5-experimental_results}
+ \input{6-conclusion}
 %  \input{division}
 
 
