--- a/references.bib
+++ b/references.bib
@@ -325,3 +325,15 @@
   journal = {INRIX},
   author  = {Inrix}
 } 
+
+@inproceedings{9217780,
+  author    = {Hernandez, Steven M. and Bulut, Eyuphan},
+  booktitle = {2020 IEEE 21st International Symposium on "A World of Wireless, Mobile and Multimedia Networks" (WoWMoM)},
+  title     = {Lightweight and Standalone IoT Based WiFi Sensing for Active Repositioning and Mobility},
+  year      = {2020},
+  volume    = {},
+  number    = {},
+  pages     = {277-286},
+  keywords  = {Tools;Wireless fidelity;Sensors;Receivers;Portable computers;Hardware;OFDM},
+  doi       = {10.1109/WoWMoM49955.2020.00056}
+}
